# typst-mandelbrot

./: .gitignore  build.py  typst.toml
plugin/: Cargo.toml
plugin/src/: lib.rs  render_modes.rs
src/: lib.typ  mandelbrot_plugin.wasm
tests/: test.typ
