[package]
name = "mandelbrot-plugin"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = "0.1.0"

# Copied from https://github.com/astrale-sharp/wasm-minimal-protocol/blob/master/examples/hello_rust/Cargo.toml
[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic